@@ -161,10 +161,12 @@ lexer<IteratorT, PositionT>::init_data[] =
     TOKEN_DATA(ANDASSIGN, "&="),
     TOKEN_DATA(OR, Q("|")),
     TOKEN_DATA(OR_TRIGRAPH, TRI("!")),
-    TOKEN_DATA(ORASSIGN, Q("|=") OR TRI("!=")),
+    TOKEN_DATA(ORASSIGN, Q("|=")),
+    TOKEN_DATA(ORASSIGN_TRIGRAPH, TRI("!=")),
     TOKEN_DATA(XOR, Q("^")),
     TOKEN_DATA(XOR_TRIGRAPH, TRI("'")),
-    TOKEN_DATA(XORASSIGN, Q("^=") OR TRI("'=")),
+    TOKEN_DATA(XORASSIGN, Q("^=")),
+    TOKEN_DATA(XORASSIGN_TRIGRAPH, TRI("'=")),
     TOKEN_DATA(COMMA, ","),
     TOKEN_DATA(COLON, ":"),
     TOKEN_DATA(DIVIDE, Q("/")),
@@ -190,8 +192,8 @@ lexer<IteratorT, PositionT>::init_data[] =
     TOKEN_DATA(PERCENTASSIGN, Q("%=")),
     TOKEN_DATA(NOT, "!"),
     TOKEN_DATA(NOTEQUAL, "!="),
-    TOKEN_DATA(OROR, Q("|") Q("|") OR TRI("!") Q("|") OR Q("|") TRI("!") OR 
-                TRI("!") TRI("!")),
+    TOKEN_DATA(OROR, Q("|") Q("|")),
+    TOKEN_DATA(OROR_TRIGRAPH, TRI("!") Q("|") OR Q("|") TRI("!") OR TRI("!") TRI("!")),
     TOKEN_DATA(PLUS, Q("+")),
     TOKEN_DATA(PLUSASSIGN, Q("+=")),
     TOKEN_DATA(PLUSPLUS, Q("+") Q("+")),
